--- a/matchingapp/static/matchingapp/home.css
+++ b/matchingapp/static/matchingapp/home.css
@@ -6,3 +6,16 @@
   color: white !important;
   background: linear-gradient(90deg, #FC466B 0%, #3F5EFB 100%);
 }
+
+.card {
+    background:#fff;
+    box-shadow:0 20px 50px rgba(0,0,0,.1);
+    border-radius:10px;
+    transition:0.5s;
+    padding: 10px 15px;
+    margin: 15px 0 10px;
+    box-sizing:border-box;
+}
+.card:hover {
+    box-shadow:0 30px 70px rgba(0,0,0,.2);
+}
