--- a/matchingapp/templates/matchingapp/login.html
+++ b/matchingapp/templates/matchingapp/login.html
@@ -31,6 +31,7 @@
 			<!-- /.Form -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
       <script type = 'text/javascript'>
+				//checks if login is correct, a false response displays an error message to the user
         	function loginUser(){
 						var csrf = $('input[name=csrfmiddlewaretoken]').val();
 	          $.ajax({
