--- a/matchingapp/templates/matchingapp/home.html
+++ b/matchingapp/templates/matchingapp/home.html
@@ -50,20 +50,37 @@
 		   			}
 		      }
 					//prints all user profiles returned, with them in descending order of matches
-					function loadProfiles(users, matches, profiles)
+					function loadProfiles(users, matches, profiles, likes)
 					{
-											for(var i = 0; i < users.length; i++)
-											{
-												try{image = "/media/"+profiles[i].profileImage}
-												catch(err){ image = "none"}
+						for(var i = 0; i < users.length; i++){
+							var hasLiked = false;
+							for(var j = 0; j < likes.length; j++){
+								if(likes[j] == users[i]){
+										hasLiked = true;
+								}
+							}
+							if(hasLiked){
+								try{image = "/media/"+profiles[i].profileImage}
+								catch(err){ image = "none"}
 
-												var itemDiv = $("<div class='col'>").
-										    append($("<div class='card'><img class='card-img-top' src='"+ image + "' alt='Card image cap'/><div class='card-body'>"
-													+"<h5 class='card-title'>" + users[i] + "</h5><p class='card-text'><i>" + profiles[i].bio +
-													"</i></p>You have " + matches[i] + " matches with this person!</p><a data-username='"+ users[i] +
-													"' class='likeUser btn btnCard'>Like Profile <span><i class='fas fa-thumbs-up'></i></a></span></div></div></div></div>"));
-										 		$(".row").append(itemDiv);
-											}
+								var itemDiv = $("<div class='col'>").
+						    append($("<div class='card'><img class='card-img-top' src='"+ image + "' alt='Card image cap'/><div class='card-body'>"
+									+"<h5 class='card-title'>" + users[i] + "</h5><p class='card-text'><i>" + profiles[i].bio +
+									"</i></p>You have " + matches[i] + " matches with this person!</p><a data-username='"+ users[i] +
+									"' class='likeUser btn btnCard'>Dislike Profile <span><i class='fas fa-thumbs-up'></i></a></span></div></div></div></div>"));
+						 		$(".row").append(itemDiv);
+							} else {
+								try{image = "/media/"+profiles[i].profileImage}
+								catch(err){ image = "none"}
+
+								var itemDiv = $("<div class='col'>").
+						    append($("<div class='card'><img class='card-img-top' src='"+ image + "' alt='Card image cap'/><div class='card-body'>"
+									+"<h5 class='card-title'>" + users[i] + "</h5><p class='card-text'><i>" + profiles[i].bio +
+									"</i></p>You have " + matches[i] + " matches with this person!</p><a data-username='"+ users[i] +
+									"' class='likeUser btn btnCard'>Like Profile <span><i class='fas fa-thumbs-up'></i></a></span></div></div></div></div>"));
+						 		$(".row").append(itemDiv);
+							}
+						}
 					}
 
 					 //queries database for matches
@@ -77,7 +94,7 @@
 							 url: '/matchingapp/lookupMatches/',
 							 data: {csrfmiddlewaretoken: csrf},
 							 success: function(content){
-								 loadProfiles(content.users, content.matches, content.profiles)
+								 loadProfiles(content.users, content.matches, content.profiles, content.likes)
 							 }});
 					 }
 
@@ -104,7 +121,7 @@
 			success: function(content)
 			{
 				wipeUsers();
-				loadProfiles(content.users, content.matches, content.profiles)
+				loadProfiles(content.users, content.matches, content.profiles, content.likes)
 			}});
 	 }
  }
